# Projects

./: .gitignore  LICENSE  README.txt
CppProjs/: CMakeLists.txt  README.txt  create_vs2013_solution.bat
CppProjs/MainUI/: CMakeLists.txt  MainUIApp.cpp  MainWindow.cpp  MainWindow.hxx
CppProjs/MainUI/dockers/: ComponentTree1.cpp  ComponentTree1.hxx  ComponentTree2.cpp  ComponentTree2.hxx  DockerManager.cpp  DockerManager.hxx  Log.cpp  Log.hxx  ProjectsTree.cpp  ProjectsTree.hxx
CppProjs/MainUI/editors/: ImageEditor.cpp  ImageEditor.hxx
CppProjs/MainUI/menus/: MainMenus.cpp  MainMenus.h  MenuAction.cpp  MenuAction.hxx  MenuEdit.cpp  MenuEdit.hxx  MenuFile.cpp  MenuFile.hxx  MenuHelp.cpp  MenuHelp.h  MenuView.cpp  MenuView.hxx
CppProjs/MainUI/resources/: MainUI.qrc
CppProjs/MainUI/utilities/: ImageUtility.cpp  ImageUtility.h  StringUtility.cpp  StringUtility.h
CppProjs/ZExplorer/: CMakeLists.txt  FileMenuManager.cpp  FileMenuManager.h  MainWindow.cpp  MainWindow.h  WorkspaceTree.cpp  WorkspaceTree.h  ZExplore.qrc  main.cpp
CppProjs/vtkExplorer/: CMakeLists.txt  vtkMain3D.cpp  vtkMainWindow.h  vtkMainWindow3D.cpp  vtkMainWindowSurfacePlot.cpp
Machine_Learning/AlleleClassifier/: srcClustersConsolidated.7z  srcClustersFine.7z
Machine_Learning/AlleleClassifier/AlleleCluster/: srcClusters.7z  srcClustersShortDist.7z  srcFullGrid.7z
Machine_Learning/AlleleClassifier/AlleleCluster/src/: Classify.java  EntryCB.java  Grid.java
Machine_Learning/AlleleClassifier/src/: AlleleClassifier.java  ClassifierHelper.java
Machine_Learning/ChildStuntAnalysis/: calcscore.m  calcscore2.m  checkjava.m  composedata.m  composedataA.m  composedataL.m  composedataL2.m  composedataML.m  composedataMLall.m  composedataMLi.m  composedataMLinterp.m  composedatac.m  composedatacL.m  consolidate.m  costwd.m  estimatewd.m  estimatewd2.m  estimatewd3.m  interp5.m  interp5s.m  interpolate.m  loaddata.m  masterL.m  masterL2.m  masterc.m  mastercL.m  masterwd.m  masterwd2.m  masterwd3.m  nn1.m  nnk.m  normalize.m  plotjava.m  scaledata.m  secondorder.m  splitdata.m  splitdatac.m  sse.m
Machine_Learning/ChildStuntAnalysis/.metadata/.mylyn/.taskListIndex/: segments_1
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.core.resources/.projects/ChildStunt/: .markers
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.core.resources/.projects/PredictStunt/: .markers  3.tree
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.core.resources/.projects/PredictStunt/org.eclipse.egit.core/: GitProjectData.properties
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.core.resources/.projects/PredictStunt2/: 1.tree
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.core.resources/.root/: 12.tree
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.debug.core/.launches/: PredictTest (1).launch  PredictTest.launch  StuntTest.launch
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.jdt.core/: 4261440058.index  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.jdt.debug.ui/: dialog_settings.xml
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.jdt.ui/: QualifiedTypeNameHistory.xml  dialog_settings.xml
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.ethan-pc_131/FP.local.files_0/: node.properties
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Machine_Learning/ChildStuntAnalysis/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
Machine_Learning/ChildStuntAnalysis/ChildStunt/: .classpath  .project
Machine_Learning/ChildStuntAnalysis/ChildStunt/src/: ChildStuntedness.java  StuntTest.java
Machine_Learning/ChildStuntAnalysis/PredictStunt/: .project
Machine_Learning/ChildStuntAnalysis/PredictStunt/src/: ChildStuntedness.java  PredictTest.java
Machine_Learning/ChildStuntAnalysis/PredictStunt2/: .classpath  .project
Machine_Learning/ChildStuntAnalysis/PredictStunt2/src/: ChildStuntedness.java  PredictTest.java
